# whisper-finetune

./: .gitignore  pyproject.toml
app/finetune/: evaluate_wer.py  finetune.py  trasncribe.py
app/stt/: stt.py
